Sun Jul 14 07:06:58 GMT 2013  Aarsh Shah <aarshkshah1992@gmail.com>

	* docs/omegascript.rst,weight.cc: Add support for $set{weighting,pl2}.

Thu Jul 11 06:12:50 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am,jsonescape.cc,jsonesctest.cc: Make the JSON escape code
	  force the text to be valid UTF-8.

Wed Jul 10 13:01:36 GMT 2013  Aarsh Shah <aarshkshah1992@gmail.com>

	* docs/omegascript.rst,weight.cc: Add support for $set{weighting,dlh}.

Tue Jul 09 06:29:18 GMT 2013  Olly Betts <olly@survex.com>

	* omindex.cc,xmlparse.h: Quick fix for infinite recursion from the
	  HtmlParser refactoring work.

Sun Jul 07 11:57:11 GMT 2013  Aarsh Shah <aarshkshah1992@gmail.com>

	* weight.cc: Add support for $set{weighting,bb2}.
	* docs/omegascript.rst: Update list of weighting schemes understood by
	  $set{weighting,...}.

Fri Jul 05 03:15:12 GMT 2013  Olly Betts <olly@survex.com>

	* weight.cc: Add conditional test so we can build against older
	  xapian-core without the new weighting schemes.

Wed Jul 03 14:02:17 GMT 2013  Aarsh Shah <aarshkshah1992@gmail.com>

	* weight.cc: Add support for $set{weighting,ineb2}.

Wed Jul 03 13:37:48 GMT 2013  Aarsh Shah <aarshkshah1992@gmail.com>

	* weight.cc: Add support for $set{weighting,ifb2}.

Wed Jul 03 11:58:22 GMT 2013  Aarsh Shah <aarshkshah1992@gmail.com>

	* weight.cc: Add support for $set{weighting,inl2}.

Wed Jun 26 13:03:24 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac: Enable -Woverloaded-virtual warning.

Wed Jun 26 13:00:33 GMT 2013  Olly Betts <olly@survex.com>

	* atomparsetest.cc,htmlparse.cc,htmlparse.h,myhtmlparse.cc,omindex.cc,
	  xmlparse.h: Rename virtual parse_html() method to just parse(), as
	  it's not HTML that's being parsed in most cases.

Wed Jun 26 07:15:30 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am,msxmlparse.cc,msxmlparse.h,omindex.cc,xmlparse.cc: Split
	  out the code specific to handling MS XML out of XmlParser into an
	  MSXmlParser subclass.
