@@ -1,3 +1,7 @@
+Mon Jul 15 12:03:32 GMT 2013  Aarsh Shah <aarshkshah1992@gmail.com>
+
+	* docs/omegascript.rst,weight.cc: Add support for $set{weighting,dph}.
+
 Sun Jul 14 07:06:58 GMT 2013  Aarsh Shah <aarshkshah1992@gmail.com>
 
 	* docs/omegascript.rst,weight.cc: Add support for $set{weighting,pl2}.
